@@ -8,6 +8,10 @@ Release 0.23.6 - UNRELEASED
 
   IMPROVEMENTS
 
+    YARN-285. Added a temporary plugin interface for RM to be able to redirect to
+    JobHistory server for apps that it no longer tracks. Contributed by
+    Derek Dagit.
+
   OPTIMIZATIONS
 
   BUG FIXES
